--- a/books/LoginView.xib
+++ b/books/LoginView.xib
@@ -16,6 +16,7 @@
 			<string>IBUIBarButtonItem</string>
 			<string>IBUILabel</string>
 			<string>IBUIButton</string>
+			<string>IBUIImageView</string>
 			<string>IBUITextField</string>
 			<string>IBUINavigationBar</string>
 			<string>IBUINavigationItem</string>
@@ -53,6 +54,7 @@
 						<string key="NSFrame">{{0, 44}, {320, 416}}</string>
 						<reference key="NSSuperview" ref="897479415"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="320921900"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -81,6 +83,7 @@
 						<string key="NSFrameSize">{320, 44}</string>
 						<reference key="NSSuperview" ref="897479415"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="624462121"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSArray" key="IBUIItems">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -103,6 +106,7 @@
 						<string key="NSFrame">{{125, 90}, {150, 31}}</string>
 						<reference key="NSSuperview" ref="897479415"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="46538306"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -130,6 +134,7 @@
 						<string key="NSFrame">{{33, 95}, {84, 21}}</string>
 						<reference key="NSSuperview" ref="897479415"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="290481151"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -150,6 +155,7 @@
 						<string key="NSFrame">{{125, 148}, {150, 31}}</string>
 						<reference key="NSSuperview" ref="897479415"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="330352003"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -175,6 +181,7 @@
 						<string key="NSFrame">{{33, 153}, {84, 21}}</string>
 						<reference key="NSSuperview" ref="897479415"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="952941632"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -192,6 +199,7 @@
 						<string key="NSFrame">{{120, 196}, {80, 29}}</string>
 						<reference key="NSSuperview" ref="897479415"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="679321118"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIHighlighted">YES</bool>
@@ -207,10 +215,25 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="192973275"/>
 					</object>
+					<object class="IBUIImageView" id="679321118">
+						<reference key="NSNextResponder" ref="897479415"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{39, 276}, {242, 128}}</string>
+						<reference key="NSSuperview" ref="897479415"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">monster_book.jpg</string>
+						</object>
+					</object>
 				</object>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="893777979"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -314,6 +337,7 @@
 							<reference ref="46538306"/>
 							<reference ref="624462121"/>
 							<reference ref="330352003"/>
+							<reference ref="679321118"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -370,6 +394,11 @@
 						<reference key="object" ref="330352003"/>
 						<reference key="parent" ref="897479415"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">47</int>
+						<reference key="object" ref="679321118"/>
+						<reference key="parent" ref="897479415"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -389,6 +418,7 @@
 					<string>43.IBPluginDependency</string>
 					<string>45.IBPluginDependency</string>
 					<string>45.IBUIButtonInspectorSelectedEdgeInsetMetadataKey</string>
+					<string>47.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -405,6 +435,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<real value="0.0"/>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -419,7 +450,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">46</int>
+			<int key="maxID">47</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -479,11 +510,13 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>mypassword</string>
 							<string>myusername</string>
+							<string>username</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UITextField</string>
 							<string>UITextField</string>
+							<string>NSString</string>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -492,6 +525,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>mypassword</string>
 							<string>myusername</string>
+							<string>username</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -502,6 +536,10 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">myusername</string>
 								<string key="candidateClassName">UITextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">username</string>
+								<string key="candidateClassName">NSString</string>
 							</object>
 						</object>
 					</object>
@@ -520,6 +558,10 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">monster_book.jpg</string>
+			<string key="NS.object.0">{400, 331}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">300</string>
 	</data>
 </archive>
